# lina-lang

./: .gitignore  Makefile  README.md  dune-project  lina.opam  standard-library-todo.md
lib/stdlib/: array.lina  coroutine.lina  debug.lina  dict.lina  dune  fn.lina  list.lina  option.lina  ord.lina  prelude.lina  result.lina  set.lina  stdlib_sources.ml  stdlib_sources.mli
lib/stdlib/modules/: array.lina  coroutine.lina  debug.lina  io.lina  math.lina  option.lina  ord.lina  os.lina  string.lina  tuple.lina
lib/stdlib/runtime/: helpers.lua
test/: analysis_test_helpers.ml  dune  helpers.ml  test.ml  test_analysis_pipeline.ml  test_cfg.ml  test_codegen.ml  test_codegen_context.ml  test_cst.ml  test_cst_comprehensive.ml  test_cycle_check.ml  test_dead_code.ml  test_dict.ml  test_error_messages.ml  test_error_nodes.ml  test_error_recovery.ml  test_ffi.ml  test_gadts.ml  test_identifier_mangle.ml  test_inference_utils.ml  test_labeled_args.ml  test_lexer.ml  test_lua_printer.ml  test_map_row_types.ml  test_module_expansion.ml  test_modules.ml  test_occurrence_builder.ml  test_package.ml  test_parser_expr.ml  test_parser_precedence.ml  test_pattern_match_helpers.ml  test_props.ml  test_records.ml  test_result.ml  test_scope_analysis.ml  test_set.ml  test_singleton_registry.ml  test_smart_naming.ml  test_suggestions.ml  test_type_traversal.ml  (+7 more)
test/format/: dune  test_format_accessors.ml  test_format_cst.ml  test_format_doc.ml  test_format_expr.ml  test_format_module.ml  test_format_pattern.ml  test_format_type.ml  test_formatter.ml
test/integration/: .gitignore  arrays.lina  assert_edge_cases.lina  binding_operators_state.lina  context_threading.lina  custom_operators.lina  deep_patterns.lina  destructive_subst.lina  dispatch_threshold.lina  ffi_comprehensive.lina  ffi_modules.lina  ffi_nullable.lina  ffi_properties.lina  ffi_variadic.lina  functors.lina  gadt_exhaustiveness.lina  gadts_basic.lina  generative_functors.lina  loops.lina  loops_with_modules.lina  module_strengthening.lina  module_type_expansion.lina  module_type_of.lina  open_include.lina  poly_recursion.lina  private_types.lina  raw_strings.lina  raw_strings_edge_cases.lina  recursive_in_module.lina  recursive_modules.lina  references.lina  relaxed_value_restriction.lina  result_builtin.lina  run_tests.sh  signature_matching.lina  signatures.lina  stdlib_coroutine.lina  stdlib_dict.lina  stdlib_option.lina  stdlib_result.lina  (+7 more)
test/integration/control_flow/: currying.lina
test/integration/data_structures/: arrays.lina
test/integration/ffi/: basic.lina  nullable.lina
test/integration/functors/: applicative.lina
test/integration/gadts/: full.lina
test/integration/misc/: feature_interactions.lina
test/integration/modules/: first_class.lina  nested.lina  simple.lina  stack.lina  type_of_test.lina  with_adt.lina
test/integration/multifile/: .gitignore  cyclic_a.lina  cyclic_b.lina  main.lina  math_ops.lina  run_test.sh  utils.lina
test/integration/operators/: comparison.lina
test/integration/patterns/: extensible_variants.lina  or_alias.lina  poly_variants.lina
test/integration/signatures/: with_module.lina
test/integration/stdlib/: coroutine_unit.lina  debug.lina  fn.lina  io.lina  list.lina  math.lina  ord.lina  os.lina  set.lina
test/integration/types/: aliases.lina  constrained_schemes.lina  cycles.lina  inference_edge_cases.lina  locally_abstract.lina  utils_paths.lina  value_restriction.lina  variance.lina  weak_type_escape.lina
test/lsp/: dune  lsp_test_helpers.ml  test_lsp_completion.ml  test_lsp_definition.ml  test_lsp_diagnostics.ml  test_lsp_document_store.ml  test_lsp_formatting.ml  test_lsp_hover.ml  test_lsp_semantic_tokens.ml  test_lsp_symbols.ml  test_lsp_types.ml
test/ocaml_compatibility/: README.md  run_comparison.sh
test/ocaml_compatibility/arrays/: array_invariant.lina  array_of_functions.lina  array_of_functions.ml  basic_get_set.lina  basic_get_set.ml  basic_init.lina  basic_init.ml  basic_make.lina  basic_make.ml  exists_forall_type.lina  exists_forall_type.ml  fold_left_type.lina  fold_left_type.ml  fold_right_type.lina  fold_right_type.ml  iter_type.lina  iter_type.ml  iteri_type.lina  iteri_type.ml  map_type.lina  map_type.ml  mapi_type.lina  mapi_type.ml  nested_arrays.lina  nested_arrays.ml  polymorphic_array_function.lina  polymorphic_array_function.ml  type_mismatch_fold.lina  type_mismatch_get.lina  type_mismatch_get.ml  type_mismatch_init.ml  type_mismatch_map.lina  type_mismatch_set.lina  type_mismatch_set.ml
test/ocaml_compatibility/binding_operators/: andplus_basic.lina  andstar_basic.lina  binding_op_as_value.lina  binding_op_multiple_and.lina  binding_op_multiple_and.ml  binding_op_nested.lina  binding_op_pattern.lina  binding_op_type_error.ml  binding_op_unbound.lina  letplus_basic.lina  letstar_basic.lina  letstar_basic.ml
test/ocaml_compatibility/dicts/: basic_dict.lina  basic_dict.ml  dict_covariant.lina  dict_covariant.ml  dict_equal_type.lina  dict_equal_type.ml  dict_filter_type.lina  dict_filter_type.ml  dict_fold_type.lina  dict_fold_type.ml  dict_get_option.lina  dict_get_option.ml  dict_in_module.lina  dict_in_module.ml  dict_key_mismatch.lina  dict_key_mismatch.ml  dict_map_type.lina  dict_map_type.ml  dict_merge_type.lina  dict_merge_type.ml  dict_value_mismatch.lina  dict_value_mismatch.ml  nested_dicts.lina  nested_dicts.ml  polymorphic_dict.lina  polymorphic_dict.ml
test/ocaml_compatibility/error_cases/: alias_linear.ml  arity_mismatch.lina  constructor_mismatch.lina  constructor_mismatch.ml  cyclic_type_alias.ml  duplicate_field.lina  extension_undefined.ml  gadt_ambiguous_type.lina  nested_occurs_check.ml  occurs_check.ml  or_pattern_arity.ml  record_field_missing.lina  type_mismatch.lina  unbound_type.lina  unbound_value.ml
test/ocaml_compatibility/extensible/: basic_extension.lina  basic_extension.ml  extension_gadt.lina  extension_gadt.ml  extension_match.lina  extension_match.ml  extension_module.lina  extension_module.ml  extension_multiple.lina  extension_multiple.ml  extension_nonexhaustive.lina  extension_with_args.lina  (+2 more)
(+627 files in other folders)
