; Test helpers library
(library
 (name test_helpers)
 (libraries parsing common)
 (modules helpers))

; Lexer tests
(library
 (name test_lexer)
 (libraries parsing common test_helpers)
 (modules test_lexer)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Parser expression tests
(library
 (name test_parser_expr)
 (libraries parsing common test_helpers)
 (modules test_parser_expr)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Parser precedence tests
(library
 (name test_parser_precedence)
 (libraries parsing common test_helpers)
 (modules test_parser_precedence)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Property-based tests
(test
 (name test_props)
 (libraries parsing common qcheck qcheck-alcotest alcotest)
 (modules test_props))

; Records and match tests
(library
 (name test_records)
 (libraries parsing common test_helpers)
 (modules test_records)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Lua codegen tests
(library
 (name test_codegen)
 (libraries parsing typing lambda lua driver common)
 (modules test_codegen)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Module system integration tests
(library
 (name test_modules)
 (libraries parsing typing lambda lua driver common unix)
 (modules test_modules)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Typing context tests
(library
 (name test_typing_context)
 (libraries typing common)
 (modules test_typing_context)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Type utilities tests
(library
 (name test_type_utils)
 (libraries typing common)
 (modules test_type_utils)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Codegen context threading tests
(library
 (name test_codegen_context)
 (libraries lua lambda typing driver common)
 (modules test_codegen_context)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Pattern match compilation tests
(library
 (name test_occurrence_builder)
 (libraries lambda typing driver parsing common unix)
 (modules test_occurrence_builder)
 (inline_tests)
 (preprocess (pps ppx_expect)))
