; Test helpers library
(library
 (name test_helpers)
 (libraries parsing common)
 (modules helpers))

; Analysis test helpers library
(library
 (name analysis_test_helpers)
 (libraries analysis typing parsing common)
 (modules analysis_test_helpers))

; Lexer tests
(library
 (name test_lexer)
 (libraries parsing common test_helpers)
 (modules test_lexer)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Parser expression tests
(library
 (name test_parser_expr)
 (libraries parsing common test_helpers)
 (modules test_parser_expr)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Parser precedence tests
(library
 (name test_parser_precedence)
 (libraries parsing common test_helpers)
 (modules test_parser_precedence)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Property-based tests
(test
 (name test_props)
 (libraries parsing common qcheck qcheck-alcotest alcotest)
 (modules test_props))

; Records and match tests
(library
 (name test_records)
 (libraries parsing common test_helpers)
 (modules test_records)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Lua codegen tests
(library
 (name test_codegen)
 (libraries parsing typing lambda lua driver common)
 (modules test_codegen)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Module system integration tests
(library
 (name test_modules)
 (libraries parsing typing lambda lua driver common unix)
 (modules test_modules)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Typing context tests
(library
 (name test_typing_context)
 (libraries typing common)
 (modules test_typing_context)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Type utilities tests
(library
 (name test_type_utils)
 (libraries typing common)
 (modules test_type_utils)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Codegen context threading tests
(library
 (name test_codegen_context)
 (libraries lua lambda typing driver common)
 (modules test_codegen_context)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Pattern match compilation tests
(library
 (name test_occurrence_builder)
 (libraries lambda typing driver parsing common unix)
 (modules test_occurrence_builder)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Type traversal tests
(library
 (name test_type_traversal)
 (libraries typing)
 (modules test_type_traversal)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Inference utilities tests
(library
 (name test_inference_utils)
 (libraries typing parsing common)
 (modules test_inference_utils)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Lua identifier mangling tests
(library
 (name test_identifier_mangle)
 (libraries lua common)
 (modules test_identifier_mangle)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Singleton registry tests
(library
 (name test_singleton_registry)
 (libraries lua common)
 (modules test_singleton_registry)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Pattern match helper tests
(library
 (name test_pattern_match_helpers)
 (libraries lambda parsing)
 (modules test_pattern_match_helpers)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Row type mapping tests
(library
 (name test_map_row_types)
 (libraries typing)
 (modules test_map_row_types)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; FFI attribute and code generation tests
(library
 (name test_ffi)
 (libraries parsing typing lua driver common)
 (modules test_ffi)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; CST (Concrete Syntax Tree) tests
(library
 (name test_cst)
 (libraries cst lina_format common)
 (modules test_cst)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Comprehensive CST integration tests
(library
 (name test_cst_comprehensive)
 (libraries cst lina_format common)
 (modules test_cst_comprehensive)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Value restriction tests
(library
 (name test_value_restriction)
 (libraries typing parsing common)
 (modules test_value_restriction)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Variance inference tests
(library
 (name test_variance_infer)
 (libraries typing common)
 (modules test_variance_infer)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Variance operations tests
(library
 (name test_variance)
 (libraries typing common)
 (modules test_variance)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Cycle detection tests
(library
 (name test_cycle_check)
 (libraries typing common)
 (modules test_cycle_check)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Module expansion tests
(library
 (name test_module_expansion)
 (libraries typing common)
 (modules test_module_expansion)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Error recovery tests
(library
 (name test_error_recovery)
 (libraries parsing common)
 (modules test_error_recovery)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Error node tests (typed error nodes)
(library
 (name test_error_nodes)
 (libraries parsing typing common)
 (modules test_error_nodes)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; GADT (Generalized Algebraic Data Types) tests
(library
 (name test_gadts)
 (libraries parsing typing lambda lua driver common unix)
 (modules test_gadts)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Lua printer tests
(library
 (name test_lua_printer)
 (libraries lua)
 (modules test_lua_printer)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Smart variable naming tests
(library
 (name test_smart_naming)
 (libraries parsing typing lambda lua driver common)
 (modules test_smart_naming)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Scope analysis tests
(library
 (name test_scope_analysis)
 (libraries analysis typing parsing common analysis_test_helpers)
 (modules test_scope_analysis)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Unused detection tests
(library
 (name test_unused_detection)
 (libraries analysis typing parsing common analysis_test_helpers)
 (modules test_unused_detection)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Dead code detection tests
(library
 (name test_dead_code)
 (libraries analysis typing parsing common analysis_test_helpers)
 (modules test_dead_code)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Warning configuration tests
(library
 (name test_warning_config)
 (libraries driver common)
 (modules test_warning_config)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; CFG (Control Flow Graph) tests
(library
 (name test_cfg)
 (libraries analysis parsing typing common analysis_test_helpers)
 (modules test_cfg)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Analysis pipeline integration tests
(library
 (name test_analysis_pipeline)
 (libraries analysis parsing typing common)
 (modules test_analysis_pipeline)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Suggestions module tests
(library
 (name test_suggestions)
 (libraries common)
 (modules test_suggestions)
 (inline_tests)
 (preprocess (pps ppx_expect)))

; Error message snapshot tests
(library
 (name test_error_messages)
 (libraries typing parsing common driver)
 (modules test_error_messages)
 (inline_tests)
 (preprocess (pps ppx_expect)))
