(library
 (name lina_stdlib)
 (public_name lina.lina_stdlib)
 (libraries)
 (preprocess (pps ppx_blob))
 (preprocessor_deps
  (file modules/fn.lina)
  (file modules/ord.lina)
  (file modules/list.lina)
  (file modules/result.lina)
  (file modules/option.lina)
  (file modules/array.lina)
  (file modules/tuple.lina)
  (file modules/dict.lina)
  (file modules/set.lina)
  (file modules/string.lina)
  (file modules/math.lina)
  (file modules/io.lina)
  (file modules/os.lina)
  (file modules/coroutine.lina)
  (file modules/debug.lina)
  (file runtime/helpers.lua)))
